<resources>
    <string name="app_name">늘솔길</string>
    <string name="action_settings">Settings</string>
    <string name="test">test</string>


    <!--    splash-->
    <string name="splash_title_text">늘솔길</string>

    <!--    sign in-->
    <string name="sign_in_title_text">늘솔길</string>
    <string name="sign_in_sub_title_text">편리하고 안전한  <font color='#0283EF'>산책길</font></string>

    <string name="sign_in_social_login_text">소셜 로그인</string>


    <!--    address-->
    <string name="sign_in_address_title_text">현재 어느지역에 거주하고 계신가요?</string>
    <string name="sign_in_address_sub_title_text">거주지역은 추후에도 <font color='#26dd78'>변경</font>하실 수 있습니다.</string>

    <string name="address_select_btn_title_text">주소 선택하기</string>
    <string name="address_ok_btn_title_text">가입완료</string>

    <!-- Navigation Graph Label Text -->

    <string name="main_nav_graph_home_fragment_label_text">HomeFragment</string>
    <string name="main_nav_graph_course_fragment_label_text">CourseFragment</string>
    <string name="main_nav_graph_history_fragment_label_text">HistoryFragment</string>
    <string name="main_nav_graph_account_fragment_label_text">AccountFragment</string>


    <string name="login_nav_graph_sign_in_fragment_label_text">SignInFragment</string>
    <string name="login_nav_graph_address_fragment_label_text">AddressFragment</string>

    <string name="course_nav_graph_race_fragment_label_text">RaceFragment</string>


    <!-- Bottom Navigation main menu item  -->
    <string name="main_menu_home_item_text">홈</string>
    <string name="main_menu_course_item_text">추천 코스</string>
    <string name="main_menu_history_item_text">나의 여정</string>
    <string name="main_menu_account_item_text">내 정보</string>

    <!--app bar-->
    <string name="account_appbar_item_title_text">내 정보</string>
    <string name="history_appbar_item_title_text">나의 여정</string>
    <string name="course_appbar_item_title_text">추천 코스</string>


    <!-- Toast Message  -->
    <string name="sign_up_error_toast_message_text">인증을 실패하셨습니다.</string>


    <!--    course Fragment  Dialog -->
    <string name="course_dialog_title">해당 코스로 산책을 진행할까요?</string>
    <!--    <string name="sign_up_error_toast_message_text">인증을 실패하셨습니다.</string>-->
    <string name="course_dialog_yes">시작하기</string>
    <string name="course_dialog_cancel">취소</string>


    <!--    course list item-->
    <string name="course_list_item_name_text">코스이름</string>
    <string name="course_list_item_address_text">코스주소</string>
    <string name="course_list_item_time_text">소요시간</string>
    <string name="course_list_item_distance_text">코스거리</string>
    <string name="course_list_item_level_text">난이도</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>


</resources>