<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="kr.ac.kgu.app.trail.ui.main.MainActivity">
    <item
        android:id="@+id/main_menu_home_item"
        android:orderInCategory="1"
        app:showAsAction="always"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/main_menu_home_item_text" />
    <item
        android:id="@+id/main_menu_course_item"
        app:showAsAction="always"
        android:orderInCategory="2"
        android:icon="@drawable/ic_baseline_folder_24"
        android:title="@string/main_menu_course_item_text" />
    <item
        android:id="@+id/main_menu_history_item"
        app:showAsAction="always"
        android:orderInCategory="3"
        android:icon="@drawable/ic_baseline_near_me_24"
        android:title="@string/main_menu_history_item_text" />
    <item
        android:id="@+id/main_menu_account_item"
        app:showAsAction="always"
        android:orderInCategory="4"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/main_menu_account_item_text" />
</menu>