<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.address.AddressFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progress_bar"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:trackColor="@color/secondaryBackgroundColor"
            app:indicatorColor="@color/primaryColor"
            android:layout_gravity="center"/>
    </FrameLayout>


    <LinearLayout
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/default_layout_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_in_address_title_text"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/address_title_text_size"
            android:textStyle="bold"
            app:fontFamily="@font/noto_sans" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/address_sub_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/address_text_vertical_margin"
            android:gravity="center"
            android:text="@string/sign_in_address_sub_title_text"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/address_sub_title_text_size"
            android:textStyle="bold"
            app:fontFamily="@font/noto_sans" />


        <LinearLayout
            android:id="@+id/address_btn_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/address_btn_layout_vertical_margin"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/address_select_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/address_btn_height"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/address_select_btn_title_text"
                android:textColor="@color/primaryTextColor"
                android:textSize="@dimen/address_btn_text_size"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                app:cornerRadius="@dimen/btn_radius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/address_next_btn"
                android:layout_width="match_parent"
                android:layout_height="@dimen/address_btn_height"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_weight="1"
                android:backgroundTint="@color/unableColor"
                android:gravity="center"
                android:text="@string/address_ok_btn_title_text"
                android:textColor="@color/primaryLightTextColor"
                android:textSize="@dimen/address_btn_text_size"
                android:theme="@style/Theme.MaterialComponents.DayNight"
                app:cornerRadius="@dimen/btn_radius" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>