<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<!--    android:background="@drawable/sign_in_background"-->
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/login_title_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/sign_in_title_layout_bottom_margin"
        app:layout_constraintBottom_toBottomOf="@+id/login_center_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/nanum_square_round_bold"
            android:gravity="center"
            android:text="@string/sign_in_title_text"
            android:textColor="@color/primary_color_opacity_60"
            android:textSize="@dimen/sign_in_title_text_size" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_sub_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/sign_in_title_layout_top_margin"
            android:gravity="center"
            android:text="@string/sign_in_sub_title_text"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/sign_in_sub_title_text_size" />

    </LinearLayout>

    <View
        android:id="@+id/login_center_view"
        android:layout_width="@dimen/default_view"
        android:layout_height="@dimen/default_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/login_social_login_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/sign_in_title_layout_top_margin"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/login_center_view">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/login_social_login_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/sign_in_social_login_text"
            android:textColor="@color/secondaryTextColor"
            android:textSize="@dimen/sign_in_social_login_text_size" />

        <View
            android:id="@+id/login_social_login_divide"
            android:layout_width="match_parent"
            android:layout_height="@dimen/default_view"
            android:layout_marginTop="@dimen/sign_in_layout_divide_margin"
            android:background="@color/dividerColor" />


        <androidx.constraintlayout.utils.widget.ImageFilterButton
            android:id="@+id/login_kakao_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_in_social_login_btn_top_margin"
            android:minHeight="48dp"
            android:src="@drawable/kakao_login_medium_wide"
            tools:ignore="SpeakableTextPresentCheck" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>